[gd_scene load_steps=4 format=4 uid="uid://bgbfiw1soclry"]

[ext_resource type="Script" uid="uid://cud6f1uhyepvj" path="res://scenes/levels/TavernWarehouse/TavernWarehouse.gd" id="1_k6f60"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_41rmo"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_18c1c"]

[node name="TavernWarehouse" type="Node2D" unique_id=359875934]
script = ExtResource("1_k6f60")

[node name="Ground" type="TileMapLayer" parent="." unique_id=1457697976]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD9//7/AAAbAAAAAAD9////AAAaAAEAAAD9/wAAAAAYAAEAAAD9/wEAAAAbAAEAAAD9/wIAAAAbAAEAAAD9/wMAAAAZAAEAAAD+//7/AAAbAAAAAAD+////AAAZAAAAAAD+/wAAAAAbAAEAAAD+/wEAAAAbAAEAAAD+/wIAAAAZAAAAAAD+/wMAAAAYAAEAAAD///7/AAAaAAEAAAD/////AAAYAAEAAAD//wAAAAAYAAEAAAD//wEAAAAYAAAAAAD//wIAAAAbAAEAAAD//wMAAAAZAAEAAAAAAP7/AAAYAAEAAAAAAP//AAAbAAAAAAAAAAAAAAAbAAEAAAAAAAEAAAAbAAEAAAAAAAIAAAAbAAEAAAAAAAMAAAAZAAEAAAABAP7/AAAYAAEAAAABAP//AAAaAAAAAAABAAAAAAAbAAAAAAABAAEAAAAYAAAAAAABAAIAAAAZAAAAAAABAAMAAAAYAAEAAAD9/wQAAAAZAAEAAAD+/wQAAAAbAAEAAAD//wQAAAAZAAEAAAAAAAQAAAAYAAEAAAD//wUAAAAZAAEAAAAAAAUAAAAZAAEAAAD+//3/AAAaAAEAAAA=")
tile_set = ExtResource("2_41rmo")

[node name="Floor" type="TileMapLayer" parent="." unique_id=2081506017]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAMAAAAcAAwAAAAAAAQAAAAfAA4AAAD/////AAAcAAwAAAD///7/AAAfAA8AAAD//wAAAAAfAA4AAAA=")
tile_set = ExtResource("2_41rmo")

[node name="PressPlates" type="TileMapLayer" parent="." unique_id=160412570]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_41rmo")

[node name="Liquids" type="TileMapLayer" parent="." unique_id=1404913561]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_41rmo")

[node name="Walls" type="TileMapLayer" parent="." unique_id=426421601]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAD+/wMAAAADAAkAAAD9/wMAAAACAAkAAAD8/wMAAAAFAAcAAAD8/wIAAAAEAAcAAAD8/wEAAAAEAAcAAAD8/wAAAAAEAAcAAAD8////AAAEAAcAAAD8//7/AAAEAAcAAAD8//3/AAAFAAYAAAD9//3/AAADAAkAAAAAAP7/AAAAAAgAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAP3/AAACAAYAAAD///3/AAABAAkAAAACAP3/AAAHAAgAAAABAP3/AAACAAkAAAACAP7/AAAEAAkAAAACAP//AAAEAAkAAAACAAAAAAAEAAkAAAACAAEAAAAEAAkAAAACAAIAAAAEAAkAAAACAAMAAAAEAAkAAAACAAQAAAADAAgAAAABAAQAAAAFAAgAAAABAAUAAAAEAAkAAAD+/wUAAAAHAAYAAAD8/wQAAAAEAAcAAAD8/wUAAAABAAgAAAD9/wUAAAACAAkAAAD+/wYAAAABAAgAAAD//wYAAAACAAkAAAAAAAYAAAACAAkAAAABAAYAAAADAAgAAAD+//3/AAAEAAsAAAD9/wQAAAASAA4AAAA=")
tile_set = ExtResource("2_41rmo")

[node name="Trails" type="TileMapLayer" parent="." unique_id=1272386589]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_41rmo")

[node name="Items" type="TileMapLayer" parent="." unique_id=1348700447]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_41rmo")

[node name="Demolitonist" parent="Items" unique_id=1487165368 instance=ExtResource("3_18c1c")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="." unique_id=163774484]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_41rmo")

[node name="BadItems" type="TileMapLayer" parent="." unique_id=1201197966]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+////AAAOABAAAAD+/wAAAAAOABAAAAD+/wEAAAAOABAAAAD//wIAAAAOABAAAAD//wQAAAAOABAAAAABAAMAAAAOABMAAAABAP7/AAAJABIAAAA=")
tile_set = ExtResource("2_41rmo")

[node name="GoodItems" type="TileMapLayer" parent="." unique_id=1070698363]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAMAAAAWABEAAAABAP7/AAAJABQAAAD+////AAAOABAAAAD+/wAAAAAOABAAAAD+/wEAAAAOABAAAAD//wIAAAAOABAAAAD//wQAAAAOABAAAAA=")
tile_set = ExtResource("2_41rmo")

[node name="MovingItems" type="TileMapLayer" parent="." unique_id=1885407671]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_41rmo")
